force-app/main/default/objects/Work_Item__c/Work_Item__c.object-meta.xml
<CustomObject>
    <description>Used to track work done by employees</description>
    <label>Work Item</label>
    <nameField>
        <displayFormat>W-{0000000}</displayFormat>
        <label>Work Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>