force-app/main/default/objects/Work_Item__c/recordTypes/Action.recordType-meta.xml
<RecordType>
    <fullName>Action</fullName>
    <active>true</active>
    <label>Action</label>
</RecordType>