force-app/main/default/objects/Work_Item__c/recordTypes/Fix.recordType-meta.xml
<RecordType>
    <fullName>Fix</fullName>
    <active>true</active>
    <label>Fix</label>
</RecordType>