force-app/main/default/objects/Work_Item__c/recordTypes/Idea.recordType-meta.xml
<RecordType>
    <fullName>Idea</fullName>
    <active>true</active>
    <label>Idea</label>
</RecordType>