force-app/main/default/objects/Work_Item__c/validationRules/Status_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_New</fullName>
    <active>true</active>
    <description>Status has to be new on creation</description>
    <errorConditionFormula>IF(ISNEW(),NOT(ISPICKVAL(Status__c, &quot;New&quot;)),FALSE)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Stage has to be set to New when creating a new Work Item</errorMessage>
</ValidationRule>